# fda-samd-toolkit

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: api-designer.md  backend.md  business-strategist.md  competitive-intelligence.md  data-engineer.md  db-architect.md  debugger.md  devops.md  financial-researcher.md  frontend.md  go-to-market.md  market-analyst.md  ml-engineer.md  ml-scientist.md  performance.md  product-manager.md  quantitative-analyst.md  researcher.md  reviewer.md  security.md  team-lead.md  tech-writer.md  tester.md  ui-designer.md
.claude/hooks/: auto-lint.sh  verify-tests.sh
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  template_contribution.md
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
docs/: changelog.md  contributing.md  getting-started.md  index.md  positioning.md  qa-checklist.md  quality.md
docs/concepts/: fda-overview.md  pccp-explained.md
docs/decisions/: 000-template.md
docs/guides/: 510k-templates.md  checklist.md  model-cards.md  pccp-generator.md  predicate-discovery.md  validation-framework.md
docs/product/: definition-of-done.md  metrics.md  personas.md  release-cadence.md  scope.md  v1.0-definition.md
docs/reference/: api.md  cli.md
examples/: checklist_artifacts.yaml  model_card_ecg_classifier.yaml  pccp_ecg_classifier.yaml  pccp_imaging_segmentation.yaml  validation_plan_ecg_classifier.yaml  validation_plan_imaging_segmentation.yaml
examples/cardioguard-ecg-ai/: README.md  cybersecurity.md  device_overview.md  model_card.yaml  pccp.yaml  risk_analysis.md  submission_checklist.yaml  timeline.md  validation_plan.yaml
research/: executive_summary.md  must_use_features.md
src/fda_samd_toolkit/: cli.py
tests/: test_cli.py  test_model_cards.py  test_schema_constraints.py  test_schema_strict.py  test_templates_510k_loader.py
tests/checklist/: __init__.py  test_main.py  test_runner.py
tests/golden/: conftest.py  test_checklist_golden.py  test_model_card_golden.py  test_pccp_golden.py  test_validation_golden.py
(+48 files in other folders)
