[project]
name = "fda-samd-toolkit"
version = "0.1.2"
description = "Open-source toolkit for FDA Software-as-a-Medical-Device (SaMD) AI/ML submissions: PCCP generators, 510(k) templates, model cards, and clinical validation frameworks."
requires-python = ">=3.11"
authors = [{name = "Laith Al-Jaouni"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["fda", "samd", "510k", "ai-ml", "healthcare", "regulatory", "pccp", "medical-device"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pydantic>=2.6",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
fda-samd = "fda_samd_toolkit.cli:cli"

[project.urls]
Homepage = "https://github.com/lal-jaouni/fda-samd-toolkit"
Issues = "https://github.com/lal-jaouni/fda-samd-toolkit/issues"
Documentation = "https://github.com/lal-jaouni/fda-samd-toolkit#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-json-report>=1.5",
    "ruff>=0.9",
    "pyright>=1.1",
    "bandit>=1.9.4",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fda_samd_toolkit"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
# S101: assert in tests is fine.
# B017: pytest.raises(Exception) in tests is a deliberate broad-catch pattern.
ignore = ["S101", "B017"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017", "E501"]
# Schemas have long Field descriptions for user-facing documentation;
# breaking them across lines hurts readability.
"src/fda_samd_toolkit/*/schemas.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
